--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -58,3 +58,8 @@ span.delete-item a {
 li:hover span.delete-item {
   visibility: visible;
 }
+
+.Footer a {
+    padding-left:2px;
+    padding-right:2px;
+}
